@@ -156,7 +156,7 @@ sub parse_ticket {
         return $self->_error_reason('missing_secret');
     }
 
-    if ($self->_ticket_idle_timeout($hash)) {
+    if ($self->_ticket_idle_timeout($hash, $ticket)) {
         # user has exceeded idle-timeout
         $self->delete_hash($hash);
         return $self->_error_reason('idle_timeout');
@@ -587,12 +587,12 @@ sub _update_ticket_timestamp {
     }
 }
 
-# boolean _ticket_idle_timeout(String hash)
+# boolean _ticket_idle_timeout(String hash, Hashref ticket)
 #
 # return true if the ticket table timestamp is older than the IdleTimeout
 # value.
 sub _ticket_idle_timeout {
-    my ($self, $hash) = @_;
+    my ($self, $hash, $ticket) = @_;
 
     my $idle = $self->get_config('TicketIdleTimeout') * 60;
     return 0 unless $idle;       # if not timeout set, its still valid.
