@@ -1,5 +1,6 @@
 {{$NEXT}}
     fixed logout set Location header (broken in 0.92)
+    added ticket object to _ticket_idle_timeout() args
 
 0.92  2011-06-03
 *** Ticket Format Has Changed ***
